Fix admin panel on mobile

--- a/app/common/style.scss
+++ b/app/common/style.scss
@@ -142,3 +142,16 @@ body {
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 4px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 4px rgba(0, 0, 0, 0.3);
 }
+
+#admin-dropdown {
+    margin: 10px 0;
+    
+    button {
+        width: 100%;
+    }
+
+    ul {
+        width: calc(100% - 30px);
+        margin: 0 15px;
+    }    
+}
